<resources>
    <string name="app_name">AmbulanceApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="verification_successful">Verification Successful !</string>
    <string name="error_occurred">An error occurred. Please try again!</string>
    <string name="no_internet">No internet connection!</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="signup">Signup</string>
    <string name="fields_required">All fields are required!</string>
    <string name="pwd_required">Password is required!</string>
    <string name="pwd_length">Password should be at least 8 characters.</string>
    <string name="phone_length">Phone Number should be 10 numbers.</string>
    <string name="fname_length">First Name should be at least 3 characters.</string>
    <string name="lname_length">Last Name should be at least 3 characters.</string>
    <string name="phone_required">Phone Number is required!</string>
    <string name="vtype_required">Choose an ambulance type!</string>
    <string name="vnumber_required">Ambulance registration number required!</string>
    <string name="email_required">Email is required!</string>
    <string name="email_invalid">Invalid Email!</string>
    <string name="fname_required">First Name is required!</string>
    <string name="lname_required">Last Name is required!</string>
    <string name="log_out">Log out</string>
    <string name="log_out_confirm">Are you sure you want to log out?</string>
    <string name="log_out_success">You have successfully logged out.</string>
    <string name="ok">OK</string>
    <string name="urgent">Emergency</string>
    <string name="view_bookings">View Bookings</string>
    <string name="book_ambulance">Book Ambulance</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Book Ambulance</item>
        <item>View Bookings</item>
        <item>Emergency</item>
        <item>Emergency Contacts</item>
    </string-array>

    <string-array name="nav_item_driver_titles">
        <item>Home</item>
        <item>View Bookings</item>
        <item>Emergency</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_as_driver">Login as Driver</string>
    <string name="login_as_customer">Login as Customer</string>
    <string name="powered_by">Powered By Group Five</string>
    <string name="login_driver">Login to your account as Driver</string>
    <string name="register_driver">Register as a Driver</string>
    <string name="phone_number">Phone Number</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="vehicle_type">Choose Ambulance Type</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="date_time"><![CDATA[Date & Time:]]></string>
    <string name="date_sample">4th January, 2020</string>
    <string name="from">From:</string>
    <string name="sample_location">Adanseman, Bortianor</string>
    <string name="to">To:</string>
    <string name="destination">Korle-Bu Teaching Hospital</string>

    <string name="apiKey">AIzaSyATmiXaWrDMMi8QoSEKSnoGu0Cbyk1U6y4</string>
    <string name="next">Next</string>
    <string name="ambulance_type">Ambulance Type:</string>
    <string name="type_your_notes_here">type your notes here</string>
    <string name="sample_time">09:30 AM</string>
    <string name="select_driver">Select Driver:</string>
    <string name="date_required">Please select date and time!</string>
    <string name="select_driver_required">Please select a driver</string>
    <string name="no_location">No location found!</string>
    <string name="no_record">No record found.</string>
    <string name="accepted">Accepted</string>
    <string name="pending">Pending</string>
    <string name="call">Call</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="track">Track</string>
    <string name="feedback">Feedback</string>
    <string name="ambulance_no">Ambulance No:</string>
    <string name="sample_amb_num">QW 2502 T</string>
    <string name="details">Details:</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_contact">Add Contact</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="full_name">Full Name</string>
    <string name="delete">Delete</string>
    <string name="enter_destination">Please enter destination</string>
    <string name="destination1">Destination:</string>
    <string name="cancelled">Cancelled</string>
    <string name="booking_success">Booking cancelled successfully</string>

</resources>
