<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_order"
            android:title="@string/book_ambulance" />
        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/ic_timetable"
            android:title="@string/view_bookings" />
        <item
            android:id="@+id/nav_emergency"
            android:icon="@drawable/ic_alarm"
            android:title="@string/urgent" />

        <item
            android:id="@+id/nav_emergency_contacts"
            android:icon="@drawable/ic_add_contact"
            android:title="@string/emergency_contacts" />

    </group>

</menu>
