<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_contact"
                android:textAppearance="@style/Custom.Headings.Bold"
                android:layout_gravity="center"
                android:gravity="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                app:boxStrokeColor="@android:color/black"
                android:theme="@style/Custom.EditText.Dialog">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneLyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:theme="@style/Custom.EditText.Dialog"
                app:boxStrokeColor="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColor="@android:color/black"
                    android:maxLength="10"/>

            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:layout_width="0dp"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button"
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textColor="@android:color/white"
                    android:textAllCaps="true"
                    android:textAppearance="@style/Custom.Body.Bold.White"
                    app:backgroundTint="@color/primaryDarkColor"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="0dp" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button"
                    android:id="@+id/add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add"
                    android:textAppearance="@style/Custom.Body.Bold.White"
                    android:textAllCaps="true"
                    app:backgroundTint="@color/primaryDarkColor" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>