<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardUseCompatPadding="false"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/lyt_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Custom.Headings"
            android:text="@string/date_sample"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"/>

        <TextView
            android:id="@+id/driverName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Custom.Headings.Bold"
            android:textSize="20sp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"/>

        <TextView
            android:id="@+id/ambType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Custom.Headings.Bold"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"/>

        <TextView
            android:id="@+id/ambNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Custom.Headings.Bold"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pendingStatus"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            style="@style/Widget.MaterialComponents.Button"
            android:text="@string/pending"
            android:textAppearance="@style/Custom.Body.Bold.White"
            app:backgroundTint="@color/secondaryDarkColor"
            android:layout_gravity="end"
            app:cornerRadius="30dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/successStatus"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            style="@style/Widget.MaterialComponents.Button"
            android:text="@string/accepted"
            android:textAppearance="@style/Custom.Body.Bold.White"
            app:backgroundTint="@color/green_20"
            android:layout_gravity="end"
            app:cornerRadius="30dp"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>
